--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "## What FT are looking for * Comfortable with code and infrastructure * How I solve problems * Code * Infrastructure design",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "pretest": "eslint --ignore-path .gitignore .",
+    "start": "nodemon serverStart.js",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --reporter spec"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +16,9 @@
     "mocha": "^5.0.4",
     "nodemon": "^1.17.2",
     "request": "^2.85.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.0",
+    "supertest": "^3.0.0"
   }
 }
