--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "mocha": "^5.0.4",
     "nodemon": "^1.17.2",
+    "pug": "^2.0.3",
     "request": "^2.85.0"
   },
   "devDependencies": {
