--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chai": "^4.1.2",
     "express": "^4.16.3",
     "mocha": "^5.0.4",
+    "mongoose": "^5.0.11",
     "nodemon": "^1.17.2",
     "pug": "^2.0.3",
     "request": "^2.85.0"
